_build/_log
### Starting build.
# Target: main.mli.depends, tags: { debug, extension:mli, file:main.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules main.mli > main.mli.depends # cached
# Target: main.cmi, tags: { byte, compile, debug, extension:mli, file:main.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o main.cmi main.mli # cached
# Target: main.ml.depends, tags: { debug, extension:ml, file:main.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules main.ml > main.ml.depends # cached
# Target: gui.mli.depends, tags: { debug, extension:mli, file:gui.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules gui.mli > gui.mli.depends # cached
# Target: hexUtil.mli.depends, tags: { debug, extension:mli, file:hexUtil.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules hexUtil.mli > hexUtil.mli.depends # cached
# Target: hexUtil.cmi, tags: { byte, compile, debug, extension:mli, file:hexUtil.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o hexUtil.cmi hexUtil.mli # cached
# Target: gui.cmi, tags: { byte, compile, debug, extension:mli, file:gui.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o gui.cmi gui.mli # cached
# Target: main.cmo, tags: { byte, compile, debug, extension:cmo, extension:ml, file:main.cmo, file:main.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o main.cmo main.ml # cached
# Target: gui.ml.depends, tags: { debug, extension:ml, file:gui.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules gui.ml > gui.ml.depends
# Target: gui.cmo, tags: { byte, compile, debug, extension:cmo, extension:ml, file:gui.cmo, file:gui.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o gui.cmo gui.ml
+ ocamlfind ocamlc -c -g -o gui.cmo gui.ml
File "gui.ml", line 147, characters 17-55:
147 |     merge_layers (List.map (fun l -> snd l) gui.layers)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type grid list
       but an expression was expected of type ('a * char list list) list list
       Type grid = char list list is not compatible with type
         ('a * char list list) list 
       Type char list is not compatible with type 'a * char list list 
Command exited with code 2.
# Compilation unsuccessful.
